test/bad/loops/for15.px

for x in 0..1 by 0.5 do
    skip
